<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contact.ContactFragment">
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />
    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:hint="@string/telephone"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        tools:layout_editor_absoluteX="0dp" />
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        tools:layout_editor_absoluteX="0dp" />
    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="236dp"
        android:text="@string/enregistrer"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="26dp" />
</androidx.constraintlayout.widget.ConstraintLayout>