<!-- item_product.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:ignore="MissingDefaultResource">
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp" />
    <EditText
        android:id="@+id/quantity"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/qte"
        android:inputType="numberSigned"
        android:text="@string/_1"
        android:translationX="250dp" />
    <Button
        android:id="@+id/addToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_au_panier"
        app:icon="@drawable/baseline_add_shopping_cart_24" />
</LinearLayout>
